# PurgePilotPrivate

./: .gitignore  LICENSE  README.md  autoUpload.sh  config.md  environment.yml  purge_config.md  pyproject.toml
purge_pilot/: __init__.py  llm_client.py  main.py  scanner.py
purge_pilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
purgepilot/: __init__.py  cli.py  scanner.py
purgepilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_cli.py  test_llm_client.py  test_main.py  test_scanner.py
