[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "purge-pilot"
version = "0.1.0"
description = "Scan data folders and use an LLM server to estimate purge confidence"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
purgep = "purge_pilot.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "responses>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
